--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@nikhilreddy3888/netlifypush",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A cli tool allows users to deploy a Single Page React application to Netlify",
   "main": "index.js",
   "bin": {
-    "netlify-deploy": "./index.js"
+    "netlifypush": "./index.js"
   },
   "keywords": [
     "netlify",
