--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@nikhilreddy3888/netlifypush",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A cli tool allows users to deploy a Single Page React application to Netlify",
   "main": "index.js",
-  "bin": {
-    "netlifypush": "./index.js"
-  },
+  "bin": "index.js",
   "keywords": [
     "netlify",
     "deploy",
