--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nikhilreddy3888/netlifypush",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A cli tool allows users to deploy a Single Page React application to Netlify",
   "main": "index.js",
   "bin": "index.js",
@@ -31,5 +31,6 @@
   "devDependencies": {
     "ncp": "^2.0.0",
     "rimraf": "^5.0.1"
-  }
+  },
+  "type": "module"
 }
